--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <!--  MAIN CONTENT-->
     <main>
       <section class="hero">
-        <div class="container hero-container">
+        <div class="container">
         <h1 class="hero-title">Effective Solutions for Your Business</h1>
         <button class="hero-btn btn" type="button">Order Service</button>
         </div>
@@ -67,15 +67,15 @@
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
-            </li class="features-item">
-            <li>
+            </li >
+            <li class="features-item">
               <h3 class="features-subtitle">Diligence</h3>
               <p class="features-text">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
-            </li class="features-item">
-            <li>
+            </li >
+            <li class="features-item">
               <h3 class="features-subtitle">Technologies</h3>
               <p class="features-text">
                 Design practice focused on digital experiences. We bring forth a
