--- a/portfolio.html
+++ b/portfolio.html
@@ -19,87 +19,109 @@
 </head>
 <body>
     <!--HEADER-->
-   <header class="header">
-    <div class="container">
-        <nav class="navigation">
+  <header class="header">
+  <div class="container header-container">
+     <nav class="navigation">
         <a class="logo link" href="./index.html">Web<span>Studio</span> </a>
         <ul class="navigation-list list">
       <li class="navigation-item"><a class="navigation-link link" href="./index.html">Studio</a></li>
       <li class="navigation-item"><a class="navigation-link link" href="./portfolio.html" >Portfolio</a></li>
-      <li class="navigation-item"><a class="navigation-link link" href="#">Contacts</a></li>
+      <li class="navigation-item"><a class="navigation-link link" href="">Contacts</a></li>
         </ul>
-      </nav>
-
+      </nav> 
       <address class="address">
         <ul class="address-list list">
           <li class="address-item"><a class="address-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
           <li class="address-item"><a class="address-tell link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
-    </div>
+  </div> 
     </header>
 
     <!--  MAIN CONTENT-->
   <main>
     <section class="section-filters">
-        <h2 class="visually-hidden">Filters</h2>
-        <ul class="filters-list list">
-            <li class="filters-item"><button class="filters-btn btn" type="button">All</button></li>
-            <li class="filters-item"><button class="filters-btn btn" type="button">Web site</button></li>
-            <li class="filters-item"><button class="filters-btn btn" type="button">App</button></li>
-            <li class="filters-item"><button class="filters-btn btn" type="button">Design</button></li>
-            <li class="filters-item"><button class="filters-btn btn" type="button">Marketing</button></li>
-        </ul>
+        <div class="container">
+            <h2 class="visually-hidden">Filters</h2>
+            <ul class="filters-list list">
+                <li class="filters-item"><button class="filters-btn btn" type="button">All</button></li>
+                <li class="filters-item"><button class="filters-btn btn" type="button">Web site</button></li>
+                <li class="filters-item"><button class="filters-btn btn" type="button">App</button></li>
+                <li class="filters-item"><button class="filters-btn btn" type="button">Design</button></li>
+                <li class="filters-item"><button class="filters-btn btn" type="button">Marketing</button></li>
+            </ul>
+        </div>
     </section>
-    <section class="section-portfolio">
-        <h1 class="visually-hidden">Our portfolio</h1>
-        <ul class="portfolio-list list">
-            <li class="portfolio-item">
-                <img  class="portfolio-image" src="./images/banking_app.jpg" alt="Banking App"  width="360" height="300">
-                <h2 class="portfolio-subtitle">Banking App Interface Concept</h2>
-                <p class="portfolio-text">App</p>
-            </li>
-            <li class="portfolio-item">
-                <img  class="portfolio-image" src="./images/cashless_payment.jpg" alt="Cashless payment" width="360" height="300">
-                <h2 class="portfolio-subtitle">Cashless Payment</h2>
-                <p class="portfolio-text">Marketing</p>
-            </li>
-            <li class="portfolio-item">
-                <img  class="portfolio-image" src="./images/meditation_app.jpg" alt="meditation app" width="360" height="300">
-                <h2 class="portfolio-subtitle">Meditaion App</h2>
-                <p class="portfolio-text">App</p>
-            </li>
-            <li class="portfolio-item">
-                <img  class="portfolio-image" src="./images/taxi_service.jpg" alt="taxi service" width="360" height="300">
-                <h2 class="portfolio-subtitle">Taxi Service</h2>
-                <p class="portfolio-text">Marketing</p>
-            </li>
-            <li class="portfolio-item">
-                <img  class="portfolio-image" src="./images/screen_illustration.jpg" alt="screen illustration" width="360" height="300">
-                <h2 class="portfolio-subtitle">Screen Illustrations</h2>
-                <p class="portfolio-text">Design</p>
-            </li>
-            <li class="portfolio-item">
-                <img  class="portfolio-image" src="./images/online_courses.jpg" alt="online courses" width="360" height="300">
-                <h2 class="portfolio-subtitle">Online Courses</h2>
-                <p class="portfolio-text">Marketing</p>
-            </li>
-            <li class="portfolio-item">
-                <img  class="portfolio-image" src="./images/insta_stories.jpg" alt="instagram stories" width="360" height="300">
-                <h2 class="portfolio-subtitle">Instagram Stories Concept</h2>
-                <p class="portfolio-text">Design</p>
-            </li>
-            <li class="portfolio-item">
-                <img  class="portfolio-image" src="./images/organic_food.jpg" alt="organic food" width="360" height="300">
-                <h2 class="portfolio-subtitle">Organic Food</h2>
-                <p class="portfolio-text">Web Site</p>
-            </li>
-            <li class="portfolio-item">
-                <img  class="portfolio-image" src="./images/fresh_coffee.jpg" alt="fresh coffee" width="360" height="300">
-                <h2 class="portfolio-subtitle">Fresh Coffee</h2>
-                <p class="portfolio-text">Web Site</p>
-            </li>
-        </ul>
+   
+        <section class="section-portfolio">
+            <div class="container">
+                <h1 class="visually-hidden">Our portfolio</h1>
+            <ul class="portfolio-list list">
+                <li class="portfolio-item">
+                    <img  class="portfolio-image" src="./images/banking_app.jpg" alt="Banking App"  width="360" height="300">
+                    <div class="card-container">
+                        <h2 class="portfolio-subtitle">Banking App Interface Concept</h2>
+                        <p class="portfolio-text">App</p>
+                    </div>
+                </li>
+                <li class="portfolio-item">
+                    <img  class="portfolio-image" src="./images/cashless_payment.jpg" alt="Cashless payment" width="360" height="300">
+                    <div class="card-container">
+                        <h2 class="portfolio-subtitle">Cashless Payment</h2>
+                        <p class="portfolio-text">Marketing</p>
+                    </div>
+                </li>
+                <li class="portfolio-item">
+                    <img  class="portfolio-image" src="./images/meditation_app.jpg" alt="meditation app" width="360" height="300">
+                    <div class="card-container">
+                        <h2 class="portfolio-subtitle">Meditaion App</h2>
+                        <p class="portfolio-text">App</p>
+                    </div>
+                </li>
+                <li class="portfolio-item">
+                    <img  class="portfolio-image" src="./images/taxi_service.jpg" alt="taxi service" width="360" height="300">
+                    <div class="card-container">
+                        <h2 class="portfolio-subtitle">Taxi Service</h2>
+                        <p class="portfolio-text">Marketing</p>
+                    </div>
+                </li>
+                <li class="portfolio-item">
+                    <img  class="portfolio-image" src="./images/screen_illustration.jpg" alt="screen illustration" width="360" height="300">
+                    <div class="card-container">
+                        <h2 class="portfolio-subtitle">Screen Illustrations</h2>
+                        <p class="portfolio-text">Design</p>
+                    </div>
+                </li>
+                <li class="portfolio-item">
+                    <img  class="portfolio-image" src="./images/online_courses.jpg" alt="online courses" width="360" height="300">
+                    <div class="card-container">
+                        <h2 class="portfolio-subtitle">Online Courses</h2>
+                        <p class="portfolio-text">Marketing</p>
+                    </div>
+                </li>
+                <li class="portfolio-item">
+                    <img  class="portfolio-image" src="./images/insta_stories.jpg" alt="instagram stories" width="360" height="300">
+                    <div class="card-container">
+                        <h2 class="portfolio-subtitle">Instagram Stories Concept</h2>
+                        <p class="portfolio-text">Design</p>
+                    </div>
+                </li>
+                <li class="portfolio-item">
+                    <img  class="portfolio-image" src="./images/organic_food.jpg" alt="organic food" width="360" height="300">
+                    <div class="card-container">
+                        <h2 class="portfolio-subtitle">Organic Food</h2>
+                        <p class="portfolio-text">Web Site</p>
+                    </div>
+                </li>
+                <li class="portfolio-item">
+                    <img  class="portfolio-image" src="./images/fresh_coffee.jpg" alt="fresh coffee" width="360" height="300">
+                    <div class="card-container">
+                        <h2 class="portfolio-subtitle">Fresh Coffee</h2>
+                        <p class="portfolio-text">Web Site</p>
+                    </div>
+                </li>
+            </ul>
+   </div>
     </section>
   </main>
 
