--- a/portfolio.html
+++ b/portfolio.html
@@ -40,7 +40,7 @@
 
     <!--  MAIN CONTENT-->
   <main>
-    <section class="section-filters">
+    <section class="section-potfolio">
         <div class="container">
             <h2 class="visually-hidden">Filters</h2>
             <ul class="filters-list list">
@@ -50,11 +50,8 @@
                 <li class="filters-item"><button class="filters-btn btn" type="button">Design</button></li>
                 <li class="filters-item"><button class="filters-btn btn" type="button">Marketing</button></li>
             </ul>
-        </div>
-    </section>
-   
-        <section class="section-portfolio">
-            <div class="container">
+        
+            
                 <h1 class="visually-hidden">Our portfolio</h1>
             <ul class="portfolio-list list">
                 <li class="portfolio-item">
@@ -131,7 +128,7 @@
           <a class="logo link" href="./index.html">Web<span>Studio</span></a>
           <p class="footer-text">
             Increase the flow of customers and sales for your business with digital
-            marketing & growth solutions.
+            marketing & growth solutions. 
           </p>
   </div>
     </footer>
